--- a/paginas/producto.html
+++ b/paginas/producto.html
@@ -70,7 +70,9 @@
                   <a href="#" class="nav-link">Accesorios</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Sobre Nosotros</a>
+                  <a href="sobreNosotros.html" class="nav-link"
+                    >Sobre Nosotros</a
+                  >
                 </li>
                 <li class="nav-item mx-2">
                   <a href="blog.html" class="nav-link">Blog</a>
