--- a/paginas/listaDeProductos.html
+++ b/paginas/listaDeProductos.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Mis Estilos -->
     <link rel="stylesheet" href="../css/custom.css" />
+    <!-- Icono de Favorito -->
+    <link rel="shortcut icon" href="../imgs/icon.png" type="image/x-icon" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
     <title>Moda Store | Lista de Productos</title>
