creacion pagina blog post

--- a/paginas/blog.html
+++ b/paginas/blog.html
@@ -110,7 +110,7 @@
                   laborum illum minima porro expedita tempore dolor...
                 </p>
               </div>
-              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+              <a href="blogPost.html" class="btn btn-outline-dark">Leer Más</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
                   laborum illum minima porro expedita tempore dolor...
                 </p>
               </div>
-              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+              <a href="blogPost.html" class="btn btn-outline-dark">Leer Más</a>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
                   laborum illum minima porro expedita tempore dolor...
                 </p>
               </div>
-              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+              <a href="blogPost.html" class="btn btn-outline-dark">Leer Más</a>
             </div>
           </div>
         </div>
@@ -167,7 +167,7 @@
                   laborum illum minima porro expedita tempore dolor...
                 </p>
               </div>
-              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+              <a href="blogPost.html" class="btn btn-outline-dark">Leer Más</a>
             </div>
           </div>
         </div>
@@ -186,7 +186,7 @@
                   laborum illum minima porro expedita tempore dolor...
                 </p>
               </div>
-              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+              <a href="blogPost.html" class="btn btn-outline-dark">Leer Más</a>
             </div>
           </div>
         </div>
@@ -205,7 +205,7 @@
                   laborum illum minima porro expedita tempore dolor...
                 </p>
               </div>
-              <a href="#" class="btn btn-outline-dark">Leer Más</a>
+              <a href="blogPost.html" class="btn btn-outline-dark">Leer Más</a>
             </div>
           </div>
         </div>
