--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <a href="" class="nav-link text-muted">Sobre Nosotros</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Blog</a>
+            <a href="paginas/blog.html" class="nav-link text-muted">Blog</a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link text-muted">Vendé con nosotros</a>
