--- a/paginas/sobreNosotros.html
+++ b/paginas/sobreNosotros.html
@@ -301,7 +301,7 @@
             <a href="" class="nav-link text-muted">Sobre Nosotros</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Blog</a>
+            <a href="blog.html" class="nav-link text-muted">Blog</a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link text-muted">Vendé con nosotros</a>
