creacion pagina ropa y calzados

--- a/paginas/calzados.html
+++ b/paginas/calzados.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../imgs/icon.png" type="image/x-icon" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
-    <title>Moda Store | Lista de Productos</title>
+    <title>Moda Store | Calzados</title>
   </head>
   <body>
     <header>
@@ -64,7 +64,7 @@
                 class="navbar-nav d-flex justify-content-center align-items-center pt-3"
               >
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Ropa</a>
+                  <a href="ropa.html" class="nav-link">Ropa</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="#" class="nav-link">Calzados</a>
@@ -91,27 +91,15 @@
     </header>
     <div class="container position-relative text-center">
       <div class="position-relative text-center text-white mb-5">
-        <img src="../imgs/banner2.jpg" alt="Banner" class="w-100" />
+        <img src="../imgs/banner4.jpg" alt="Banner" class="w-100" />
         <div
           class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
         >
-          <h1 class="display-4">Nuevos Ingresos</h1>
+          <h1 class="display-4">Calzados</h1>
         </div>
       </div>
       <div class="row">
         <div class="col col-lg-3 text-start">
-          <h3>Ropa</h3>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Remeras</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Sweaters</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Vestidos</a>
-            </li>
-          </ul>
           <h3>Calzados</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
@@ -124,38 +112,26 @@
               <a href="" class="nav-link text-muted">Sandalias</a>
             </li>
           </ul>
-          <h3>Accesorios</h3>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Anteojos</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Gorros</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Carteras</a>
-            </li>
-          </ul>
         </div>
         <div class="col col-9 d-flex flex-wrap justify-content-between">
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img1.jpg"
+                src="../imgs/calzados/img1.jpg"
                 class="card-img-top"
                 height="300"
                 alt="Producto"
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Vestido Azul</p>
+              <p class="card-text fw-bold">Zapatos Blancos</p>
               <small class="text-secondary">ARS $2500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img2.jpg"
+                src="../imgs/calzados/img2.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -163,14 +139,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Remera Lisa</p>
+              <p class="card-text fw-bold">Zapatillas Rosas</p>
               <small class="text-secondary">ARS $1000</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img3.jpg"
+                src="../imgs/calzados/img3.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -178,14 +154,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Abrigo Celeste</p>
+              <p class="card-text fw-bold">Zapatos Elegantes</p>
               <small class="text-secondary">ARS $3000</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img4.jpg"
+                src="../imgs/calzados/img4.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -193,14 +169,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Abrigo Elegante</p>
+              <p class="card-text fw-bold">Zapatos Tiras</p>
               <small class="text-secondary">ARS $3500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img5.jpg"
+                src="../imgs/calzados/img5.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -208,14 +184,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Sweater Amarillo</p>
+              <p class="card-text fw-bold">Zapatillas Deportivas</p>
               <small class="text-secondary">ARS $3500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img6.jpg"
+                src="../imgs/calzados/img6.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -223,14 +199,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Blusa Verde</p>
+              <p class="card-text fw-bold">Zapatos Oro</p>
               <small class="text-secondary">ARS $1500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img7.jpg"
+                src="../imgs/calzados/img7.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -238,14 +214,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Jean Gastado</p>
+              <p class="card-text fw-bold">Zapatos Amarillos</p>
               <small class="text-secondary">ARS $2300</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img8.jpg"
+                src="../imgs/calzados/img8.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -253,14 +229,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Abrigo Elegante Corto</p>
+              <p class="card-text fw-bold">Zapatillas Deportivas</p>
               <small class="text-secondary">ARS $3200</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/ropa/img9.jpg"
+                src="../imgs/calzados/img9.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -268,7 +244,7 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Blusa Rosa</p>
+              <p class="card-text fw-bold">Zapatillas Deportivas</p>
               <small class="text-secondary">ARS $1300</small>
             </div>
           </div>
@@ -291,10 +267,12 @@
       <footer class="d-flex justify-content-between my-5 text-start flex-wrap">
         <ul class="nav flex-column">
           <li class="fw-bold nav-item">
-            <a href="" class="nav-link text-dark">Productos</a>
+            <a href="listaDeProductos.html" class="nav-link text-dark"
+              >Productos</a
+            >
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Ropa</a>
+            <a href="ropa.html" class="nav-link text-muted">Ropa</a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link text-muted">Calzados</a>
