--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../imgs/icon.png" type="image/x-icon" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
-    <title>Moda Store | Lista de Productos</title>
+    <title>Moda Store | Ropa</title>
   </head>
   <body>
     <header>
@@ -67,7 +67,7 @@
                   <a href="#" class="nav-link">Ropa</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Calzados</a>
+                  <a href="calzados.html" class="nav-link">Calzados</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="#" class="nav-link">Accesorios</a>
@@ -91,11 +91,11 @@
     </header>
     <div class="container position-relative text-center">
       <div class="position-relative text-center text-white mb-5">
-        <img src="../imgs/banner2.jpg" alt="Banner" class="w-100" />
+        <img src="../imgs/banner3.jpg" alt="Banner" class="w-100" />
         <div
           class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
         >
-          <h1 class="display-4">Nuevos Ingresos</h1>
+          <h1 class="display-4">Ropa</h1>
         </div>
       </div>
       <div class="row">
@@ -110,30 +110,6 @@
             </li>
             <li class="nav-item">
               <a href="" class="nav-link text-muted">Vestidos</a>
-            </li>
-          </ul>
-          <h3>Calzados</h3>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Zapatillas</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Zapatos</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Sandalias</a>
-            </li>
-          </ul>
-          <h3>Accesorios</h3>
-          <ul class="nav flex-column">
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Anteojos</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Gorros</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link text-muted">Carteras</a>
             </li>
           </ul>
         </div>
@@ -291,13 +267,15 @@
       <footer class="d-flex justify-content-between my-5 text-start flex-wrap">
         <ul class="nav flex-column">
           <li class="fw-bold nav-item">
-            <a href="" class="nav-link text-dark">Productos</a>
+            <a href="listaDeProductos.html" class="nav-link text-dark"
+              >Productos</a
+            >
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Ropa</a>
+            <a href="#" class="nav-link text-muted">Ropa</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Calzados</a>
+            <a href="calzados.html" class="nav-link text-muted">Calzados</a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link text-muted">Accesorios</a>
