creacion pagina accesorios y navegabilidad

--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
                 class="navbar-nav d-flex justify-content-center align-items-center pt-3"
               >
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Ropa</a>
+                  <a href="paginas/ropa.html" class="nav-link">Ropa</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Calzados</a>
+                  <a href="paginas/calzados.html" class="nav-link">Calzados</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Accesorios</a>
+                  <a href="paginas/accesorios.html" class="nav-link"
+                    >Accesorios</a
+                  >
                 </li>
                 <li class="nav-item mx-2">
                   <a href="paginas/sobreNosotros.html" class="nav-link"
@@ -246,13 +248,17 @@
             <a href="" class="nav-link text-dark">Productos</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Ropa</a>
+            <a href="paginas/ropa.html" class="nav-link text-muted">Ropa</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Calzados</a>
+            <a href="paginas/calzados.html" class="nav-link text-muted"
+              >Calzados</a
+            >
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Accesorios</a>
+            <a href="paginas/accesorios.html" class="nav-link text-muted"
+              >Accesorios</a
+            >
           </li>
         </ul>
         <ul class="nav flex-column">
