--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="../imgs/icon.png" type="image/x-icon" />
     <!-- Iconos Bootstrap -->
     <link rel="stylesheet" href="../css/bootstrap-icons.css" />
-    <title>Moda Store | Calzados</title>
+    <title>Moda Store | Accesorios</title>
   </head>
   <body>
     <header>
@@ -67,10 +67,10 @@
                   <a href="ropa.html" class="nav-link">Ropa</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Calzados</a>
+                  <a href="calzados.html" class="nav-link">Calzados</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="accesorios.html" class="nav-link">Accesorios</a>
+                  <a href="#" class="nav-link">Accesorios</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="sobreNosotros.html" class="nav-link"
@@ -91,25 +91,25 @@
     </header>
     <div class="container position-relative text-center">
       <div class="position-relative text-center text-white mb-5">
-        <img src="../imgs/banner4.jpg" alt="Banner" class="w-100" />
+        <img src="../imgs/banner5.jpg" alt="Banner" class="w-100" />
         <div
           class="position-absolute top-50 start-50 translate-middle-x w-100 px-3"
         >
-          <h1 class="display-4">Calzados</h1>
+          <h1 class="display-4">Accesorios</h1>
         </div>
       </div>
       <div class="row">
         <div class="col col-lg-3 text-start">
-          <h3>Calzados</h3>
+          <h3>Accesorios</h3>
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a href="" class="nav-link text-muted">Zapatillas</a>
+              <a href="" class="nav-link text-muted">Anteojos</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link text-muted">Zapatos</a>
+              <a href="" class="nav-link text-muted">Gorras</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link text-muted">Sandalias</a>
+              <a href="" class="nav-link text-muted">Carteras</a>
             </li>
           </ul>
         </div>
@@ -117,21 +117,21 @@
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img1.jpg"
+                src="../imgs/accesorios/img1.jpg"
                 class="card-img-top"
                 height="300"
                 alt="Producto"
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatos Blancos</p>
+              <p class="card-text fw-bold">Anteojos Rosa</p>
               <small class="text-secondary">ARS $2500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img2.jpg"
+                src="../imgs/accesorios/img2.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -139,14 +139,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatillas Rosas</p>
+              <p class="card-text fw-bold">Anteojos Marrones</p>
               <small class="text-secondary">ARS $1000</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img3.jpg"
+                src="../imgs/accesorios/img3.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -154,14 +154,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatos Elegantes</p>
+              <p class="card-text fw-bold">Anteojos Retro</p>
               <small class="text-secondary">ARS $3000</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img4.jpg"
+                src="../imgs/accesorios/img4.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -169,14 +169,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatos Tiras</p>
+              <p class="card-text fw-bold">Gorra Cap</p>
               <small class="text-secondary">ARS $3500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img5.jpg"
+                src="../imgs/accesorios/img5.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -184,14 +184,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatillas Deportivas</p>
+              <p class="card-text fw-bold">Gorra Cap</p>
               <small class="text-secondary">ARS $3500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img6.jpg"
+                src="../imgs/accesorios/img6.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -199,14 +199,14 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatos Oro</p>
+              <p class="card-text fw-bold">Goorra Cap</p>
               <small class="text-secondary">ARS $1500</small>
             </div>
           </div>
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img7.jpg"
+                src="../imgs/accesorios/img7.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -221,7 +221,7 @@
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img8.jpg"
+                src="../imgs/accesorios/img8.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -236,7 +236,7 @@
           <div class="card m-2" style="width: 15rem">
             <a href="producto.html">
               <img
-                src="../imgs/calzados/img9.jpg"
+                src="../imgs/accesorios/img9.jpg"
                 alt=""
                 class="card-img-top"
                 height="300"
@@ -275,7 +275,7 @@
             <a href="ropa.html" class="nav-link text-muted">Ropa</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link text-muted">Calzados</a>
+            <a href="calzados.html" class="nav-link text-muted">Calzados</a>
           </li>
           <li class="nav-item">
             <a href="accesorios.html" class="nav-link text-muted">Accesorios</a>
