--- a/paginas/listaDeProductos.html
+++ b/paginas/listaDeProductos.html
@@ -64,13 +64,13 @@
                 class="navbar-nav d-flex justify-content-center align-items-center pt-3"
               >
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Ropa</a>
+                  <a href="ropa.html" class="nav-link">Ropa</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Calzados</a>
+                  <a href="calzados.html" class="nav-link">Calzados</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Accesorios</a>
+                  <a href="accesorios.html" class="nav-link">Accesorios</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="sobreNosotros.html" class="nav-link"
@@ -291,16 +291,18 @@
       <footer class="d-flex justify-content-between my-5 text-start flex-wrap">
         <ul class="nav flex-column">
           <li class="fw-bold nav-item">
-            <a href="" class="nav-link text-dark">Productos</a>
+            <a href="listaDeProductos.html" class="nav-link text-dark"
+              >Productos</a
+            >
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Ropa</a>
+            <a href="ropa.html" class="nav-link text-muted">Ropa</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Calzados</a>
+            <a href="calzados.html" class="nav-link text-muted">Calzados</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Accesorios</a>
+            <a href="accesorios.html" class="nav-link text-muted">Accesorios</a>
           </li>
         </ul>
         <ul class="nav flex-column">
