--- a/paginas/ropa.html
+++ b/paginas/ropa.html
@@ -70,7 +70,7 @@
                   <a href="calzados.html" class="nav-link">Calzados</a>
                 </li>
                 <li class="nav-item mx-2">
-                  <a href="#" class="nav-link">Accesorios</a>
+                  <a href="accesorios.html" class="nav-link">Accesorios</a>
                 </li>
                 <li class="nav-item mx-2">
                   <a href="sobreNosotros.html" class="nav-link"
@@ -278,7 +278,7 @@
             <a href="calzados.html" class="nav-link text-muted">Calzados</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link text-muted">Accesorios</a>
+            <a href="accesorios.html" class="nav-link text-muted">Accesorios</a>
           </li>
         </ul>
         <ul class="nav flex-column">
