--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -199,7 +199,7 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Goorra Cap</p>
+              <p class="card-text fw-bold">Gorra Cap</p>
               <small class="text-secondary">ARS $1500</small>
             </div>
           </div>
@@ -214,7 +214,7 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatos Amarillos</p>
+              <p class="card-text fw-bold">Cartera Cuero</p>
               <small class="text-secondary">ARS $2300</small>
             </div>
           </div>
@@ -229,7 +229,7 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatillas Deportivas</p>
+              <p class="card-text fw-bold">Cartera Bordada</p>
               <small class="text-secondary">ARS $3200</small>
             </div>
           </div>
@@ -244,7 +244,7 @@
               />
             </a>
             <div class="card-body">
-              <p class="card-text fw-bold">Zapatillas Deportivas</p>
+              <p class="card-text fw-bold">Cartera Colores</p>
               <small class="text-secondary">ARS $1300</small>
             </div>
           </div>
